--- a/css/output.css
+++ b/css/output.css
@@ -1674,6 +1674,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(156 131 95 / var(--tw-bg-opacity));
 }
 
+.bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+
+.bg-red-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#4C9654\] {
   --tw-bg-opacity: 1;
   background-color: rgb(76 150 84 / var(--tw-bg-opacity));
@@ -1844,6 +1854,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .px-1\.5 {
