--- a/css/output.css
+++ b/css/output.css
@@ -1674,16 +1674,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(156 131 95 / var(--tw-bg-opacity));
 }
 
-.bg-blue-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
-}
-
-.bg-red-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
-}
-
 .bg-\[\#4C9654\] {
   --tw-bg-opacity: 1;
   background-color: rgb(76 150 84 / var(--tw-bg-opacity));
@@ -1929,6 +1919,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .text-\[3rem\] {
   font-size: 3rem;
+}
+
+.text-\[1rem\] {
+  font-size: 1rem;
 }
 
 .text-h2 {
